<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="left"
    tools:context=".Petunjuk">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Petunjuk Pengisian Jawaban"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="#000"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petunjuk1"
                android:layout_gravity="start"
                android:textSize="17sp"
                android:textColor="#000"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petunjuk2"
                android:textSize="17sp"
                android:textColor="#000"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petunjuk3"
                android:textSize="17sp"
                android:textColor="#000"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petunjuk4a"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:textColor="#000"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petunjuk4b"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:textColor="#000"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petunjuk4c"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:textColor="#000"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petunjuk5"
                android:textSize="17sp"
                android:textColor="#000"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petunjuk6"
                android:textSize="17sp"
                android:textColor="#000"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>